	a name/value attribute pair.  This is because "." (dot) is the
	operator used to create attribute list objects in the comterp
	command interpreter.  Normally most attribute objects are
	automatically indirected to the attribute value when finally
	applied, but in this command overrides that and returns the
	symbol which is the attribute name.


	* enable the command interpreter in the text editor panel at
	the bottom of the flipbook user interface.

	* copy anything but the last line in the interpreter text
        buffer to the end of the buffer before executing -- like shell
        mode in emacs.

Library Changes

        -- Attribute -- 

	* migrate macro for declaring symbol-table based class ids to
	one place -- Attribute/_comutil.h.  Rename it CLASS_SYMID
	(from classid).

	* AttributeList::add_attr fix.

	* new twist to the classid stuff.  Now classid() gets defined
	as a virtual function along with static methods for
	class_name() and class_symid() when you add the CLASS_SYMID
	macro (<Attribute/_comutil.h>) to a class definition.  This
	was used for identifying derived ComFunc's, ComFunc's that
	have a func symbol id as well, but might vary with
	internationalization or other custom changes to the
	interpreter.  But the symbol id of the class name itself
	doesn't change.

	-- ComUtil -- 

	* modify lexical scanner to preserve token state between invocations.
	This fixes a problem with multi-line comments when comterp is
	in server (when comterp is receiving input strings one at a
	time from an external source).  However, this does not fix the
	problem with multi-line strings when comterp is in server
	mode, which will require a better solution for preserving more
	of the token state (i.e. the partial token buffer) between
	invocations.  This is also a necessary step in preserving
	parallel use of one lexical scanner by more than one comterp
	in the same program.

	-- ComTerp --

	* fix a problem in server-mode comterp.  Part of making