@@ -117,10 +117,10 @@ ivtools is known to build with many versions of gcc (<= gcc-2.7.2, >=
 gcc-2.8.1, >= egcs-1.0.1) and on a variety of Unix'es: SunOS 4.1
 (MIT's X11R5), Solaris 2.6 (X11R6), Irix 5.2 (SGI's X11R5), Linux 1.2
 (Slackware 3.0, XFree86 3.1), Linux 2.* (RedHat 4.0 thru 6.0, Debian
-2.*), and NetBSD.  There are contributed configs for HPUX and Dec
-Alpha. Recently it has been built on Windows NT 4.0 using Cygwin from
-Cygnus Solutions (see README.cygwin).  You can pick up Linux-ELF
-binaries from the ivtools web page
+2.*), NetBSD, and perhaps now FreeBSD.  There are contributed configs
+for HPUX and Dec Alpha. Recently it has been built on Windows NT 4.0
+using Cygwin from Cygnus Solutions (see README.cygwin).  You can pick
+up Linux-ELF binaries from the ivtools web page
 (http://www.vectaport.com/ivtools/).
 
 If you have a question about this software, desire to add code, found
